<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="PRG_Commands" Id="{411fcb37-780f-06ea-2006-e35ff122d5e1}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_Commands
VAR
	fbTofStartCommand1		: TOF;		// Shows the exection was happen
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Commands.fbBaseCommand1();
Commands.fbStartCommand1();
	
fbTofStartCommand1(
	IN := Commands.fbStartCommand1.Q,
	PT := T#2S);	
	
Commands.fbCustomStateCommand1();	
Commands.fbAddCommand1();
Commands.fbDelayedAddCommand1();]]></ST>
    </Implementation>
    <LineIds Name="PRG_Commands">
      <LineId Id="34" Count="0" />
      <LineId Id="22" Count="7" />
      <LineId Id="17" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>